<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyAppPortfolio"
    android:background="#ffdcf0ff">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/editText"
        android:text="M"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn1"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff000000"
            android:background="#F08C35"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:textColor="#ff000000"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage2" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn3"
            android:id="@+id/button3"
            android:layout_margin="10dp"
            android:background="#F08C35"
            android:textColor="#ff000000"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage3" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn4"
            android:id="@+id/button5"
            android:layout_margin="10dp"
            android:background="#F08C35"
            android:textColor="#ff000000"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage4" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn5"
            android:id="@+id/button4"
            android:layout_margin="10dp"
            android:background="#F08C35"
            android:textColor="#ff000000"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage5" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn6"
            android:id="@+id/button6"
            android:layout_margin="10dp"
            android:background="#CD0E3E"
            android:textColor="#ffffffff"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true"
            android:onClick="sendMessage6" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:id="@+id/textView"
        android:textColor="#ff000000"
        android:textSize="24dp"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
